file saving adds - if goal is done, or if the repeat cycle has passed improved dark mode design added repeat cycle fields in the adding dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StickHabit</string>
+    <string name="app_name">STICKHABIT</string>
     <string name="add_button">Add</string>
     <string name="cancel_button">Cancel</string>
     <string name="hint_username">Username</string>
