downloading and uploading done fix logging in methods

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
 
+    <string-array name="repeatCycle">
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
+        <item>Yearly</item>
+
+    </string-array>
+
 </resources>
