--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="cancel_button">Cancel</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
+    <string name="checkbox_done">Done</string>
+    <string name="checkbox_notdone">Not done</string>
+    <string name="checkbox_alldone">All done</string>
 
     <string-array name="repeatCycle">
         <item>Daily</item>
